# AzaleaCapstone

./: Cargo.toml  README.md  source_test.az  source_test.lm  source_test.txt  source_test.txt.rej  syntax.txt
ast_dump/: Digraph.gv  Graph.gv  ast.json
azalea_ide/: ast_draw.py  deploy.sh  main.py  pyproject.toml
azalea_ide/compiler/: .gitignore  .rustc_info.json
grammar/azalea_grammar/: Cargo.toml  formal_grammar.pest
grammar/azalea_grammar/src/: main.rs
grammar/lambda_grammar/: Cargo.toml  formal_grammar.pest  grammar_test.txt
grammar/lambda_grammar/src/: main.rs
lambda_ide/: imgui.ini  main.py  pyproject.toml
lambda_ide2/: ast_draw.py  deploy.sh  ex.py  main.py  pyproject.toml
lambda_ide2/compiler/: .rustc_info.json
lambda_ide2/src/: lambda_ide.py
lynx/: Cargo.toml
lynx/src/: main.rs
shared/file_resolver/: Cargo.toml
shared/file_resolver/src/: lib.rs
shared/fuzzer/src/: lib.rs
shared/lexer/: Cargo.toml  README.md  source_test.txt
shared/lexer/src/: .lexer.rs.rustfmt  errors.rs  lexer.rs  lib.rs  span.rs  token.rs
shared/parser/: 2  Cargo.toml  README.md  main.rs
shared/parser/src/: .ast_parser.rs.rustfmt  .lib.rs.rustfmt  ast.rs  ast_parser.rs  errors.rs  lib.rs
shared/preprocessor/: Cargo.toml  README.md  source_test.txt
shared/preprocessor/src/: errors.rs  lib.rs  preprocessor.rs
shared/semantic_analyzer/: Cargo.toml
shared/semantic_analyzer/src/: lib.rs
shared/symbol_table/: Cargo.toml
shared/symbol_table/src/: .lib.rs.rustfmt  lib.rs
shared/visitor/src/: lib.rs
src/: main.rs
