[package]
name    = "msc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preprocessor = {path = "shared/preprocessor/"}
lexer        = {path = "shared/lexer/"}
parser       = {path = "shared/parser/"}
anyhow       = "1.0.71"
indicatif = "0.17.5"
