[tool.poetry]
name = "lambda-ide"
version = "0.1.0"
description = "This is the IDE for the Morehead Lambda Compiler"
authors = ["daltonhensley19 <daltonhensley2000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lambda_ide"}]

[tool.poetry.dependencies]
python = "^3.11"
strip-ansi = "^0.1.1"
pyqt6 = "^6.5.1"
pyqt6-qt6 = "^6.5.1"
qt-material = "^2.14"
ansi2html = "^1.8.0"
pygments = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
